partie header w background

--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <title>mautitania culture guide</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body> 
+    <!-- start header -->
     <header>
         <a href="" class="logo">mauritania</a>
-        <nav>
+        <nav class="navigation">
             <a href="">home</a>
             <a href="">culture</a>
             <a href="">quizes</a>
             <a href="">sign up</a>
         </nav>
     </header>
+    <!-- End header -->
+
+    <!-- start section -->
+    <section class="hero">
+        
+    </section>
+    <!--End section-->
 </body>
 </html>
