--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
     <!-- start section -->
     <section class="hero">
-        
+        <div class="container">
+            <h2>mauritania</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti modi, accusamus sint nostrum itaque voluptatibus accusantium odio, quas numquam ipsam ipsum! Voluptatem dignissimos optio, non voluptate sapiente et totam sint!</p>
+            <a href="" class="hero.btn">explore</a>
+        </div>
     </section>
     <!--End section-->
 </body>
