--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <!-- End header -->
 
-    <!-- start section -->
+    <!-- start hero section -->
     <section class="hero">
         <div class="container">
             <h2>mauritania</h2>
@@ -28,6 +28,46 @@
             <a href="" class="hero.btn">explore</a>
         </div>
     </section>
-    <!--End section-->
+    <!--End hero section-->
+
+    <!-- start culture section -->
+    <section class="culture">
+        <div>
+            <table>
+                <tr>
+                    <td><h2>head of state and goverments</h2></td>
+                    <td><p>President: Mohamed Ould Cheikh Ghazouani, assisted by Prime Minister: Ismail Ould Cheikh Sidiya</p></td>
+                </tr>
+                <tr>
+                    <td><h2>Capital</h2></td>
+                    <td>nouakchott</td>
+                </tr>
+                <tr>
+                    <td><h2>Population</h2></td>
+                    <td>4,270,000</td>
+                </tr>
+                <tr>
+                    <td><h2>Monetary Unit</h2></td>
+                    <td>ouguiya (UM)</td>
+                </tr>
+                <tr>
+                    <td><h2>Official Language</h2></td>
+                    <td>Arabic1</td>
+                </tr>
+                <tr>
+                    <td><h2>Official Religion</h2></td>
+                    <td>Islam</td>
+                </tr>
+                <tr>
+                    <td><h2>Total Area (Sq Km)</h2></td>
+                    <td>1,030,700</td>
+                </tr>
+                <tr>
+                    <td><h2>national languages</h2></td>
+                    <td>Arabic, hassania , Fula, Soninke, and Wolof</td>
+                </tr>
+            </table>
+        </div>
+    </section>
 </body>
 </html>
