--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- start culture section -->
     <section class="culture">
-        <div>
+        <div class="content">
             <table>
                 <tr>
                     <td><h2>head of state and goverments</h2></td>
