--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="container">
             <h2>mauritania</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti modi, accusamus sint nostrum itaque voluptatibus accusantium odio, quas numquam ipsam ipsum! Voluptatem dignissimos optio, non voluptate sapiente et totam sint!</p>
-            <a href="" class="hero.btn">explore</a>
+            <a href="#cultures" class="hero.btn">explore</a>
         </div>
     </section>
     <!--End hero section-->
 
     <!-- start culture section -->
-    <section class="culture">
+    <section class="culture" id="cultures">
         <div class="content">
            <div class="facts">
                <h2>Mauritania: Facts & Stats</h2>
