--- a/index.html
+++ b/index.html
@@ -29,9 +29,22 @@
         </div>
     </section>
     <!--End hero section-->
+    <section class="info">
+        <div class="information-container">
+             <div>
+                 <h2>mauritania</h2>
+                 <p>Mauritania, country on the Atlantic coast of Africa. Mauritania forms a geographic and cultural bridge between the North African Maghrib (a region that also includes Morocco, Algeria, and Tunisia) and the westernmost portion of Sub-Saharan Africa. Culturally it forms a transitional zone between the Arab-Amazigh (Berber) populations of North Africa and the African peoples in the region to the south of the Tropic of Cancer known as the Sudan (a name derived from the Arabic bilād al-sūdān, “land of the Blacks”). Much of Mauritania encompasses part of the Sahara desert, and, until the drought conditions that affected most of that zone of Africa in the 1970s, a large proportion of the population was nomadic. The country’s mineral wealth includes large reserves of iron ore, copper, and gypsum, all of which are now being exploited, as well as some oil resources.</p>
+             </div>
+        </div>
+    </section>
+
+
+
+
+
 
     <!-- start culture section -->
-    <section class="culture" id="cultures">
+    <!-- <section class="culture" id="cultures"> 
         <div class="content">
            <div class="facts">
                <h2>Mauritania: Facts & Stats</h2>
@@ -75,6 +88,6 @@
            <div>
            </div>
         </div>
-    </section>
+    </section>-->
 </body>
 </html>
