add audio files

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
                    <p>flag of mauritania</p>
                 </div>
              </div>
+             <div class="audio">
+                <audio controls>
+                    <source src="audios/instrumental-national-anthem-Mauritania.mp3" type="audio/mpeg">
+                </audio>
+                <p><strong> Audio File:</strong>National anthem of Mauritania</p>
+            </div>
+            <div>
+                <p>Mauritania was administered as a French colony during the first half of the 20th century and became independent on November 28, 1960. By the terms of the constitution, Islam is the official state religion, but the republic guarantees freedom of conscience and religious liberty to all. Arabic is the official language; Fula, Soninke, and Wolof are national languages. The capital, Nouakchott, is located in the southwestern part of the country.</p>
+                
+            </div>
         </div>
     </section>
 
