--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 <p>Mauritania was administered as a French colony during the first half of the 20th century and became independent on November 28, 1960. By the terms of the constitution, Islam is the official state religion, but the republic guarantees freedom of conscience and religious liberty to all. Arabic is the official language; Fula, Soninke, and Wolof are national languages. The capital, Nouakchott, is located in the southwestern part of the country.</p>
                 <img src="images/World-Data-Locator-Map-Mauritania.webp" alt="mauritania map carte">
             </div>
+            <div class="land">
+                <h2>land</h2>
+                <p>Mauritania is bounded to the northwest by Western Sahara (formerly the Spanish Sahara), to the northeast by Algeria, to the east and southeast by Mali, and to the southwest by Senegal. Its Atlantic Ocean coastline, to the west, extends for 435 miles (700 km) from the delta of the Sénégal River northward to Cape Nouâdhibou (Cape Blanco) Peninsula.</p>
+            </div>
         </div>
     </section>
 
