--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                 <h2>land</h2>
                 <p>Mauritania is bounded to the northwest by Western Sahara (formerly the Spanish Sahara), to the northeast by Algeria, to the east and southeast by Mali, and to the southwest by Senegal. Its Atlantic Ocean coastline, to the west, extends for 435 miles (700 km) from the delta of the Sénégal River northward to Cape Nouâdhibou (Cape Blanco) Peninsula.</p>
             </div>
+            <div class="language">
+                <h2>languages</h2>
+                <p>Arabic is the official language of Mauritania; Fula, Soninke, and Wolof are recognized as national languages. The Moors speak Ḥassāniyyah Arabic, a dialect that draws most of its grammar from Arabic and uses a vocabulary of both Arabic and Arabized Amazigh words. Most of the Ḥassāniyyah speakers are also familiar with colloquial Egyptian and Syrian Arabic due to the influence of television and radio transmissions from the Middle East. One result of Mauritanian Arabic being drawn into the mainstream of the Arabic-speaking world has been a revalorization of Ḥassāniyyah forms in personal names, especially evident in the use of “Ould” or “Wuld” (“Son of”) in male names. The Tukulor and the Fulani in the Sénégal River basin speak Fula (Fulfulde, Pular), a language of the Atlantic branch of the Niger-Congo family. The other ethnic groups have retained their respective languages, which are also part of the Niger-Congo family: Soninke (Mande branch) and Wolof (Atlantic branch). Since the late 1980s Arabic has been the primary language of instruction in schools throughout the country, slowly ending a long-standing advantage formerly held by the French-schooled populations of the Sénégal River valley.</p>
+            </div>
         </div>
     </section>
 
