add facts 7& stats page

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <div class="container">
             <h2>mauritania</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti modi, accusamus sint nostrum itaque voluptatibus accusantium odio, quas numquam ipsam ipsum! Voluptatem dignissimos optio, non voluptate sapiente et totam sint!</p>
-            <a href="#cultures" class="hero.btn">explore</a>
+            <a href="#info" class="hero.btn">explore</a>
         </div>
     </section>
     <!--End hero section-->
-    <section class="info">
+
+    <!-- start info section -->
+    <section class="info" id="info">
         <div class="information-container">
              <div class="mauritania">
                 <h2>mauritania</h2>
@@ -66,16 +68,15 @@
                 <p>In the Sahel region of Mauritania, a traditional subsistence economy composed of livestock raising, agriculture, crafts, and petty trading supports most of the population. In the Sahara region, however, a modern export economy is developing, based on the exploitation of iron ore and copper resources and of the rich fishing waters off the continental shelf. The Mauritanian economy receives much needed capital investment and technical assistance from abroad, and, in turn, it is sensitive to the vacillations in the world markets. More than three-fourths of the Mauritanian population engages in traditional activities, among which livestock raising is the most important. In numbers, goats and sheep are the most important livestock, followed by cattle and camels. Cattle are raised primarily in the southern region, whereas goats and sheep are dispersed as far north as the limits of the Sahara. Camels are raised mostly in the north and the centre, especially in the Adrar region. The growth of the Mauritanian economy slowed in the 1980s after a lengthy period of rapid expansion in the 1960s and ’70s. Since the severe drought in the early 1970s, the country has been dependent upon imported foodstuffs to feed its population. In the early 1980s iron ore production slowed because of a decline in world market prices; fishing became the leading source of foreign exchange earnings and remained so for much of the 1990s. In the mid-1990s the government began to demonstrate its commitment to the development of a tourist industry to further diversify the Mauritanian economy.</p>
                 <br><p>Mauritania’s budget, usually in deficit, was nominally balanced in the late 1980s. In the mid-1980s principal and interest on a relatively large foreign indebtedness was rescheduled, but indebtedness remains a significant problem. In the 1990s and early 2000s, additional portions of Mauritania’s debt were rescheduled or cancelled, and in 2005 the country was approved for the relief of its multilateral debt. Foreign aid, both bilateral (from France, Japan, Germany, and the Netherlands) and by multilateral agencies (such as the African Development Bank, the Islamic Development Bank, the International Monetary Fund [IMF], the International Fund for Agricultural Development, and the European Union [EU]), is primarily targeted to assist in project development but is also used for budgetary and food support. In the late 1990s donors linked aid to Mauritania with increased participation by the private sector. Although the government subsequently privatized a number of its holdings, donors were critical of practices that hindered the development of domestic markets. Increases in the gross domestic product (GDP) during the last two decades of the 20th century were generally offset by population increases. Mauritania’s GDP grew solidly in the first decades of the 21st century, mainly because of petroleum production that began in 2006. Early optimism that petroleum production might provide a major new source of income, however, has been tempered by disappointing results.</p>
             </div>
+            <div class="facts-stats">
+                <a href="facts & stats.html" target="blank">Facts & stats</a>
+            </div>
         </div>
     </section>
-
-
-
-
-
+    <!-- end info section -->
 
     <!-- start culture section -->
-    <!-- <section class="culture" id="cultures"> 
+    <!--<section class="culture" id="cultures"> 
         <div class="content">
            <div class="facts">
                <h2>Mauritania: Facts & Stats</h2>
