--- a/facts & stats.html
+++ b/facts & stats.html
@@ -12,8 +12,8 @@
     <header>
         <a href="" class="logo">mauritania</a>
         <nav class="navigation">
-            <a href="">home</a>
-            <a href="">culture</a>
+            <a href="index.html">home</a>
+            <a href="culture.html">culture</a>
             <a href="">quizes</a>
             <a href="">sign up</a>
         </nav>
