--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mautitania culture guide</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Merriweather&family=Montserrat&family=Moon+Dance&family=Roboto&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body> 
@@ -12,8 +15,8 @@
     <header>
         <a href="" class="logo">mauritania</a>
         <nav class="navigation">
-            <a href="">home</a>
-            <a href="">culture</a>
+            <a href="index.html">home</a>
+            <a href="culture.html">culture</a>
             <a href="">quizes</a>
             <a href="">sign up</a>
         </nav>
@@ -25,13 +28,13 @@
         <div class="container">
             <h2>mauritania</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti modi, accusamus sint nostrum itaque voluptatibus accusantium odio, quas numquam ipsam ipsum! Voluptatem dignissimos optio, non voluptate sapiente et totam sint!</p>
-            <a href="#info" class="hero.btn">explore</a>
+            <a href="culture.html" class="hero.btn">explore</a>
         </div>
     </section>
     <!--End hero section-->
 
     <!-- start info section -->
-    <section class="info" id="info">
+    <!--<section class="info" id="info">
         <div class="information-container">
              <div class="mauritania">
                 <h2>mauritania</h2>
@@ -72,7 +75,7 @@
                 <a href="facts & stats.html" target="blank">Facts & stats</a>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- end info section -->
 
     <!-- start culture section -->
