--- a/facts & stats.html
+++ b/facts & stats.html
@@ -64,6 +64,10 @@
            <div>
            </div>
         </div>
+        <div class="img-btn">
+            <h4>hey dude! wannna see images of mauritania?</h4>
+            <a href="culture.html">if you do! click me!</a>
+        </div>
     </section>
 </body>
 </html>
