mauritani-image-page

--- a/facts & stats.html
+++ b/facts & stats.html
@@ -66,7 +66,7 @@
         </div>
         <div class="img-btn">
             <h4>hey dude! wannna see images of mauritania?</h4>
-            <a href="culture.html">if you do! click me!</a>
+            <a href="mauritania-images.html">if you do! click me!</a>
         </div>
     </section>
 </body>
