--- a/mauritania-images.html
+++ b/mauritania-images.html
@@ -57,29 +57,29 @@
                <a href="images/bg14.jpg" class="img">
                    <img src="images/bg14.jpg" alt="">
                </a>
-               <a href="images/bg13.jpg" class="img">
-                   <img src="images/bg13.jpg" alt="">
+               <a href="images/lbkhour3.jpg" class="img">
+                   <img src="images/lbkhour3.jpg" alt="">
                </a>
-               <a href="images/bg13.jpg" class="img">
-                   <img src="images/bg14.jpg" alt="">
+               <a href="images/bg73.jpg" class="img">
+                   <img src="images/bg73.jpg" alt="">
                </a>
-               <a href="images/bg13.jpg" class="img">
-                   <img src="images/bg14.jpg" alt="">
+               <a href="images/lbkhour2.jpg" class="img">
+                   <img src="images/lbkhour2.jpg" alt="">
                </a>
-               <a href="images/bg12.jpg" class="img">
-                   <img src="images/bg12.jpg" alt="">
+               <a href="images/painting.jpg" class="img">
+                   <img src="images/painting.jpg" alt="">
                </a>
-               <a href="images/bg11.jpg" class="img">
-                   <img src="images/bg11.jpg" alt="">
+               <a href="images/istockphoto-691555962-170667a.jpg" class="img">
+                   <img src="images/istockphoto-691555962-170667a.jpg" alt="">
                </a>
-               <a href="images/bg10.jpg" class="img">
-                   <img src="images/bg10.jpg" alt="">
+               <a href="images/fouchi.jpg" class="img">
+                   <img src="images/fouchi.jpg" alt="">
                </a>
-               <a href="images/bg9.jpg" class="img">
-                   <img src="images/bg9.jpg" alt="">
+               <a href="images/background13.jpg" class="img">
+                   <img src="images/background13.jpg" alt="">
                </a>
-               <a href="images/bg8.jpg" class="img">
-                   <img src="images/bg8.jpg" alt="">
+               <a href="images/background12.jpg" class="img">
+                   <img src="images/background12.jpg" alt="">
                </a>
                <a href="images/bg7.jpg" class="img">
                    <img src="images/bg7.jpg" alt="">
@@ -91,7 +91,136 @@
                    <img src="images/bg5.jpg" alt="">
                </a>
                <a href="images/bg4.jpg" class="img">
-                   <img src="images/b.jpg" alt="">
+                   <img src="images/bg4.jpg" alt="">
+               </a>
+               <a href="images/bg30.jpg" class="img">
+                   <img src="images/bg30.jpg" alt="">
+               </a>
+               <a href="images/bg31.jpg" class="img">
+                   <img src="images/bg31.jpg" alt="">
+               </a>
+               <a href="images/bg32.jpg" class="img">
+                   <img src="images/bg32.jpg" alt="">
+               </a>
+               <a href="images/bg33.jpg" class="img">
+                   <img src="images/bg33.jpg" alt="">
+               </a>
+               <a href="images/b34.jpg" class="img">
+                   <img src="images/b34.jpg" alt="">
+               </a>
+               <a href="images/bg35.jpg" class="img">
+                   <img src="images/bg35.jpg" alt="">
+               </a>
+               <a href="images/bg36.jpg" class="img">
+                   <img src="images/bg36.jpg" alt="">
+               </a>
+               <a href="images/bg37.jpg" class="img">
+                   <img src="images/bg37.jpg" alt="">
+               </a>
+               <a href="images/bg38.jpg" class="img">
+                   <img src="images/bg38.jpg" alt="">
+               </a>
+               <a href="images/bg39.jpg" class="img">
+                   <img src="images/bg39.jpg" alt="">
+               </a>
+               <a href="images/bg40.jpg" class="img">
+                   <img src="images/bg40.jpg" alt="">
+               </a>
+               <a href="images/bg41.jpg" class="img">
+                   <img src="images/bg41.jpg" alt="">
+               </a>
+               <a href="images/bg42.jpg" class="img">
+                   <img src="images/bg42.jpg" alt="">
+               </a>
+               <a href="images/bg43.jpg" class="img">
+                   <img src="images/bg43.jpg" alt="">
+               </a>
+               <a href="images/bg44.jpg" class="img">
+                   <img src="images/bg44.jpg" alt="">
+               </a>
+               <a href="images/bg45.jpg" class="img">
+                   <img src="images/bg45.jpg" alt="">
+               </a>
+               <a href="images/bg46.jpg" class="img">
+                   <img src="images/bg46.jpg" alt="">
+               </a>
+               <a href="images/bg47.jpg" class="img">
+                   <img src="images/bg47.jpg" alt="">
+               </a>
+               <a href="images/bg48.jpg" class="img">
+                   <img src="images/bg48.jpg" alt="">
+               </a>
+               <a href="images/bg49.jpg" class="img">
+                   <img src="images/bg49.jpg" alt="">
+               </a>
+               <a href="images/bg50.jpg" class="img">
+                   <img src="images/bg50.jpg" alt="">
+               </a>
+               <a href="images/bg51.jpg" class="img">
+                   <img src="images/bg51.jpg" alt="">
+               </a>
+               <a href="images/bg52.jpg" class="img">
+                   <img src="images/bg52.jpg" alt="">
+               </a>
+               <a href="images/bg53.jpg" class="img">
+                   <img src="images/bg53.jpg" alt="">
+               </a>
+               <a href="images/bg54.jpg" class="img">
+                   <img src="images/bg54.jpg" alt="">
+               </a>
+               <a href="images/bg55.jpg" class="img">
+                   <img src="images/bg55.jpg" alt="">
+               </a>
+               <a href="images/bg56.jpg" class="img">
+                   <img src="images/bg56.jpg" alt="">
+               </a>
+               <a href="images/bg57.jpg" class="img">
+                   <img src="images/bg57.jpg" alt="">
+               </a>
+               <a href="images/bg58.jpg" class="img">
+                   <img src="images/bg58.jpg" alt="">
+               </a>
+               <a href="images/bg59.jpg" class="img">
+                   <img src="images/bg59.jpg" alt="">
+               </a>
+               <a href="images/bg60.jpg" class="img">
+                   <img src="images/bg60.jpg" alt="">
+               </a>
+               <a href="images/bg61.jpg" class="img">
+                   <img src="images/bg61.jpg" alt="">
+               </a>
+               <a href="images/bg62.jpg" class="img">
+                   <img src="images/bg62.jpg" alt="">
+               </a>
+               <a href="images/bg63.jpg" class="img">
+                   <img src="images/bg63.jpg" alt="">
+               </a>
+               <a href="images/bg64.jpg" class="img">
+                   <img src="images/bg64.jpg" alt="">
+               </a>
+               <a href="images/bg65.jpg" class="img">
+                   <img src="images/bg65.jpg" alt="">
+               </a>
+               <a href="images/bg66.jpg" class="img">
+                   <img src="images/bg66.jpg" alt="">
+               </a>
+               <a href="images/bg67.jpg" class="img">
+                   <img src="images/bg67.jpg" alt="">
+               </a>
+               <a href="images/caping.jpg" class="img">
+                   <img src="images/caping.jpg" alt="">
+               </a>
+               <a href="images/bg69.jpg" class="img">
+                   <img src="images/bg69.jpg" alt="">
+               </a>
+               <a href="images/bg70.jpg" class="img">
+                   <img src="images/bg70.jpg" alt="">
+               </a>
+               <a href="images/bg71.jpg" class="img">
+                   <img src="images/bg71.jpg" alt="">
+               </a>
+               <a href="images/bg72.jpg" class="img">
+                   <img src="images/bg72.jpg" alt="">
                </a>
            </div>
         </div>
