--- a/quizez.html
+++ b/quizez.html
@@ -16,18 +16,18 @@
             <div class="quize-container">
                 <div class="quize">
                     <div class="Q">
-                        <h3></h3>
+                        <h3>what is the president name</h3>
                     </div>
                     <div class="choices">
-                        <div class="Q1"></div>
-                        <div class="Q2"></div>
-                        <div class="Q3"></div>
-                        <div class="Q4"></div>
+                        <div class="Q1">quazwani</div>
+                        <div class="Q2">aziz</div>
+                        <div class="Q3">haibelti</div>
+                        <div class="Q4">moctar</div>
                     </div>
                 </div>
                 <div class="quizes-btn">
-                    <div class="next-btn"></div>
-                    <div class="back-btn"></div>
+                    <div class="next-btn">next</div>
+                    <div class="back-btn">back</div>
                 </div>
             </div>
         </div>
