--- a/quizez.html
+++ b/quizez.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quizes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Merriweather&family=Montserrat&family=Moon+Dance&family=Roboto&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -16,18 +19,36 @@
             <div class="quize-container">
                 <div class="quize">
                     <div class="Q">
-                        <h3>what is the president name</h3>
+                        <h3>Q1: what is the president name ?</h3>
                     </div>
                     <div class="choices">
-                        <div class="Q1">quazwani</div>
-                        <div class="Q2">aziz</div>
-                        <div class="Q3">haibelti</div>
-                        <div class="Q4">moctar</div>
+                        <div class="Q1">
+                            <label for="">quazwani</label>
+                            <input type="radio">
+                        </div>
+                        <div class="Q2">
+                            <label for="">aziz</label>
+                            <input type="radio">
+                        </div>
+                        <div class="Q3">
+                            <label for="">haibelti</label>
+                            <input type="radio">
+                        </div>
+                        <div class="Q4">
+                            <label for="">moctar</label>
+                            <input type="radio">
+                        </div>
                     </div>
                 </div>
                 <div class="quizes-btn">
-                    <div class="next-btn">next</div>
-                    <div class="back-btn">back</div>
+                    <div class="next-btn">
+                        <!-- <label for="">next</label> -->
+                            <input type="submit" value="next">
+                    </div>
+                    <div class="back-btn">
+                        <!-- <label for="">back</label> -->
+                            <input type="submit" value="back">
+                    </div>
                 </div>
             </div>
         </div>
