--- a/quizez.html
+++ b/quizez.html
@@ -42,13 +42,12 @@
                 </div>
                 <div class="quizes-btn">
                     <div class="next-btn">
-                        <!-- <label for="">next</label> -->
-                            <input type="submit" value="next">
+                        <a href="#" >next &raquo;</a>
                     </div>
-                    <div class="back-btn">
-                        <!-- <label for="">back</label> -->
+                    <!-- <div class="back-btn">
+                        <!-- <label for="">back</label> 
                             <input type="submit" value="back">
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
