--- a/quizez.html
+++ b/quizez.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header>
+        <a href="" class="logo">mauritania</a>
+        <nav class="navigation">
+            <a href="index.html">home</a>
+            <a href="culture.html">culture</a>
+            <a href="">quizes</a>
+            <a href="">sign up</a>
+        </nav>
+    </header>
     <section class="quizes">
         <div class="quize-content">
             <div class="title">
@@ -23,20 +32,20 @@
                     </div>
                     <div class="choices">
                         <div class="Q1">
-                            <label for="">quazwani</label>
-                            <input type="radio">
+                            <label for="question1">quazwani</label>
+                            <input type="radio" id="question1">
                         </div>
                         <div class="Q2">
-                            <label for="">aziz</label>
-                            <input type="radio">
+                            <label for="question2">mohamed</label>
+                            <input type="radio" id="question2">
                         </div>
                         <div class="Q3">
-                            <label for="">haibelti</label>
-                            <input type="radio">
+                            <label for="question3">haibelti</label>
+                            <input type="radio" id="question3">
                         </div>
                         <div class="Q4">
-                            <label for="">moctar</label>
-                            <input type="radio">
+                            <label for="question4">moctar</label>
+                            <input type="radio" id="question4">
                         </div>
                     </div>
                 </div>
