question button color and cursor

--- a/quizez.html
+++ b/quizez.html
@@ -31,19 +31,19 @@
                         <h3>Q1: what is the president name ?</h3>
                     </div>
                     <div class="choices">
-                        <div class="Q1">
+                        <div class="Q1 bg-color-cursor">
                             <label for="question1">quazwani</label>
                             <input type="radio" id="question1">
                         </div>
-                        <div class="Q2">
+                        <div class="Q2 bg-color-cursor">
                             <label for="question2">mohamed</label>
                             <input type="radio" id="question2">
                         </div>
-                        <div class="Q3">
+                        <div class="Q3 bg-color-cursor">
                             <label for="question3">haibelti</label>
                             <input type="radio" id="question3">
                         </div>
-                        <div class="Q4">
+                        <div class="Q4 bg-color-cursor">
                             <label for="question4">moctar</label>
                             <input type="radio" id="question4">
                         </div>
